[gd_scene load_steps=2 format=2]

[ext_resource path="res://World/GUI.gd" type="Script" id=1]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Move" type="ColorRect" parent="."]
margin_left = -169.861
margin_right = -119.861
margin_bottom = 60.0
color = Color( 0.027451, 0.109804, 0.980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Move"]
margin_right = 13.0
margin_bottom = 29.0
rect_scale = Vector2( 3.76, 2.04 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="ColorRect" parent="."]
margin_left = -49.045
margin_right = 0.955032
margin_bottom = 60.0
color = Color( 0.952941, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Attack"]
margin_right = 13.0
margin_bottom = 29.0
rect_scale = Vector2( 3.76, 2.04 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability" type="ColorRect" parent="."]
margin_left = 88.76
margin_right = 138.759
margin_bottom = 60.0
color = Color( 0.882353, 0.027451, 0.980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Ability"]
margin_right = 13.0
margin_bottom = 29.0
rect_scale = Vector2( 3.76, 2.04 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Move/Button" to="." method="_on_move_Button_pressed"]
[connection signal="pressed" from="Attack/Button" to="." method="_on_attack_Button_pressed"]
[connection signal="pressed" from="Ability/Button" to="." method="_on_ability_Button_pressed"]
